<resources>
    <string name="app_name">BoXueGu</string>
    <string name="user_name">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="login_out">退出登陆</string>
    <string name="description">图片</string>
    <string name="find_password">找回密码</string>
    <string name="to_register">立即注册</string>
    <string name="to_login">立即登陆</string>
    <string name="course">课程</string>
    <string name="exercise">习题</string>
    <string name="info">我</string>
    <string name="course_history">播放记录</string>
    <string name="setting">设置</string>
    <string name="modify_password">修改密码</string>
    <string name="security_setting">设置密保</string>
    <string name="old_password">请输入原始密码</string>
    <string name="new_Password">请输入新密码</string>
    <string name="re_new_password">请再次输入新密码</string>
    <string name="save">保存</string>
    <string name="what_is_your_username">您的用户名是？</string>
    <string name="input_username">请输入您的用户名</string>
    <string name="what_is_your_name">您的姓名是？</string>
    <string name="input_name">请输入要验证的姓名</string>
    <string name="validate">验证</string>
    <string name="info_avatar">头像</string>
    <string name="info_username">用户名</string>
    <string name="info_default_username">account</string>
    <string name="info_default_nickname">昵称</string>
    <string name="info_sex">性别</string>
    <string name="info_default_sex">女</string>
    <string name="info_signature">签明</string>
    <string name="info_default_signature">大家好</string>
    <string name="intro">简 介</string>
    <string name="android_exercises">Android 基础教程1-10章视频</string>
    <string name="video">视频</string>
    <string name="have_not_play_history">暂无播放记录</string>
</resources>
