<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".activity.FindPasswordActivity">

    <include layout="@layout/main_title_bar" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/what_is_your_username"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:background="@drawable/find_psw_icon"
        android:hint="@string/input_username"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:textColor="#000"
        android:textColorHint="#a3a3a3"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:text="@string/what_is_your_name"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_validate_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:background="@drawable/find_psw_icon"
        android:hint="@string/input_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:textColor="#000"
        android:textColorHint="#a3a3a3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/register_selector"
        android:text="@string/validate"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>