<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:orientation="vertical"
    tools:context=".activity.ModifyPassword">

    <include layout="@layout/main_title_bar" />

    <EditText
        android:id="@+id/et_original_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:background="@drawable/register_user_name_bg"
        android:drawableStart="@drawable/psw_icon"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:background="@drawable/register_user_name_bg"
        android:drawableStart="@drawable/psw_icon"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/new_Password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_re_new_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:background="@drawable/register_user_name_bg"
        android:drawableStart="@drawable/psw_icon"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/re_new_password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/register_selector"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</LinearLayout>