<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch_bg"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <include layout="@layout/main_title_bar" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@drawable/default_icon"
        android:contentDescription="@string/description"/>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/register_user_name_bg"
        android:drawableStart="@drawable/user_name_icon"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textColor="#000"
        android:textColorHint="#a3a3a3"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/register_user_name_bg"
        android:drawableStart="@drawable/psw_icon"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textColor="#000"
        android:textColorHint="#a3a3a3"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/et_re_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/register_user_name_bg"
        android:drawableStart="@drawable/psw_icon"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textColor="#000"
        android:textColorHint="#a3a3a3"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry"
        android:autofillHints=""/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@drawable/register_selector"
        android:textSize="18sp" />
</LinearLayout>